testing/tests/ui/iso646.stderr
error: the binary AND operator is called `bitand` in rinja
 --> <source attribute>:1:7
  |
       1 | {{ a & b }}
         |       ^ close to this token
         |
 --> tests/ui/iso646.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the filter operator `|` must not be preceded by any whitespace characters
       the binary OR operator is called `bitor` in rinja
        --> <source attribute>:1:5
         |
       1 | {{ a | b }}
         |     ^ close to this token
         |
  --> tests/ui/iso646.rs:17:10
   |
17 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the binary XOR operator is called `xor` in rinja
 --> <source attribute>:1:7
  |
       1 | {{ a ^ b }}
         |       ^ close to this token
         |
  --> tests/ui/iso646.rs:31:10
   |
31 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
